added yaml directive

--- a/404.html
+++ b/404.html
@@ -1,3 +1,7 @@
+---
+permalink: /404.html
+---
+
 <!DOCTYPE html>
 <!--[if lt IE 8 ]><html class="no-js ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="no-js ie ie8" lang="en"> <![endif]-->
