--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="row banner">
             <div class="banner-text">
                 <h1 class="responsive-headline">David Dobmeier</h1>
-                <h3>I'm a <span>Systems Administrator</span> and <span>Backend Developer</span> who has a passion for automation, reliability, and bleeding edge technology.</h3>
+                <h3>I'm a <span>Cloud Engineer</span>, <span>Systems Administrator</span> and <span>Hobbyist Tinkerer</span> who has a passion for automation, reliability, and bleeding edge technology.</h3>
                 <hr />
                 <ul class="social">
                     <li><a href="https://www.linkedin.com/in/daviddobmeier/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
@@ -58,12 +58,12 @@
             <div class="nine columns main-col">
                 <h2>About Me</h2>
                 <p>
-                    I'm a masters student studying computer science and also actively developing an auto-grading system at the University at Buffalo.
+                    I'm a Cloud Engineer for a global cloud consulting firm who is driven to solve the hard problems and adapt to a fast-paced and ever changing environment.
                     I have experience in Systems and Networks administration currently both professionally and as a hobby interest.
                     I strive to create and support systems that not only function efficiently under the hood, but also are stable and scalable for consistent future use.
                     I am always looking forward to the next iteration of faster more efficient technology with custom PC building a favourite pasttime.
                     When I'm not in front of a computer screen, I'm probably 3D Printing, skiing, hammocking, managing musical productions, or getting lost in a novel.
-                </p>
+                </p> 
                 <div class="row">
                     <div class="columns contact-details">
                         <h2>Contact Details</h2>
@@ -139,8 +139,23 @@
                         <h3>Stark and Wayne</h3>
                         <p class="info">Cloud Engineer<span>&bull;</span> <em class="date">August 2017 - Present</em></p>
                         <p>
-                            Engineering and consulting for companies worldwide in the creation and deployment of open source cloud management solutions. 
-                            Deploying and maintaining large scale application platforms as well as building tools and infrastructure to automate CloudFoundry, Concourse, and Bosh Releases.
+                            Consulted and Engineered solutions for companies worldwide in the creation and deployment of open source cloud management solutions. 
+                            Deployed and maintained large scale application platforms as well as built tools and infrastructure to automate CloudFoundry, Concourse, and Bosh Releases.
+                            Contributed and released several large scale open-source projects into the <a href="https://github.com/cloudfoundry-community" target="_blank">CF Community</a> 
+                            and <a href="https://github.com/starkandwayne" target="_blank">Stark & Wayne</a> organizations. 
+                        </p>
+                    </div>
+                </div>
+                <div class="row item">
+                    <div class="twelve columns">
+                        <h3>University at Buffalo</h3>
+                        <p class="info">Development Team Lead<span>&bull;</span> <em class="date">August 2015 - Present</em></p>
+                        <p>
+                            Responsible for leading a team in developing an Autograding system capable of providing real-time feedback for coding assignments
+                            that is language agnostic and can detect academic integrity violations. Developed the back-end distributed system in python which
+                            allowed jobs to be dispatched onto a scalable cluster of servers for effcient and reliable processing.
+                            Ensured the servers and infrastructure were capable of supporting the daily load of 2500+ students as well as prepared for future 
+                            scalability with increased performance and stability.
                         </p>
                     </div>
                 </div>
@@ -167,19 +182,7 @@
                 <div class="row item">
                     <div class="twelve columns">
                         <h3>University at Buffalo</h3>
-                        <p class="info">Development Team Lead<span>&bull;</span> <em class="date">August 2015 - Present</em></p>
-                        <p>
-                            Responsible for leading a team in developing an Autograding system capable of providing real-time feedback for coding assignments
-                            that is language agnostic and can detect academic integrity violations. Developed the back-end distributed system in python which
-                            allowed jobs to be dispatched onto a scalable cluster of servers for effcient and reliable processing.
-                            Ensured the servers and infrastructure were capable of supporting the daily load of 2500+ students as well as prepared for future scalability with increased performance and stability.
-                        </p>
-                    </div>
-                </div>
-                <div class="row item">
-                    <div class="twelve columns">
-                        <h3>University at Buffalo</h3>
-                        <p class="info">Undergraduate Teaching Assistant<span>&bull;</span> <em class="date">February 2015 - Present</em></p>
+                        <p class="info">Undergraduate Teaching Assistant<span>&bull;</span> <em class="date">February 2015 - December 2017</em></p>
                         <p>
                             Designed homeworks/projects, performed grading, and instructed students both in group settings and 1-on-1
                             in Modern Networking, Data Structures, Intro to the Internet, Intro to CS I, and Intro to CS II
@@ -195,13 +198,15 @@
             </div>
             <div class="nine columns main-col">
                 <p>
-                    <b>Systems:</b> VMware VSphere, Citrix XenServer, Windows Server, Linux/Unix <br>
+                    <b>Systems:</b> VMware VSphere, AWS, GCP, Kubernetes, Azure, OpenStack, Citrix XenServer, Windows Server, Linux/Unix <br>
+                    <b>Platforms:</b> Pivotal Cloud Foundry, OSS Cloud Foundry, GE Predix, Google App Engine<br>
                     <b>Software:</b> Exchange, IIS, AD, Office Suite, Citrix, Cisco IOS, PDQDeploy, Wireshark <br>
                     <b>Networks/Protocols:</b> LAN/WAN, TCP/IP, DNS, DHCP, NAT, SNMP, SMTP, FTP, VPN, HTTP <br>
-                    <b>Programming Languages:</b> C/C++, Go, Python, Shell Scripting, Java, Ruby <br>
+                    <b>Programming Languages:</b> C/C++, Go, Python, Shell Scripting, JavaScript, Java, Ruby <br>
                     <b>Hardware:</b> Cisco Routers, Switches, WAPs, ASAs, Netgear Switches, Shoretel PBX
                     EMC SAN, Workstations, Servers(HP, Dell, IBM), Printers, Plotters(Canon) <br>
                 </p>
+                <!--
                 <div class="bars">
                     <ul class="skills">
                         <li><span class="bar-expand systems"></span><em>Systems</em></li>
@@ -212,6 +217,7 @@
                         <li><span class="bar-expand troubleshooting"></span><em>Troubleshooting/Debugging</em></li>
                     </ul>
                 </div>
+                -->
             </div>
         </div>
     </section>
@@ -224,7 +230,93 @@
             <div class="nine columns main-col">
                 <div class="row item">
                     <div class="twelve columns">
-                        <h3>802.11n/ac rate adaptation in smartphones -- Performance-power tradeoffs</h3>
+                        <h3> Doomsday <a class="github" href="https://github.com/thomasmmitchell/doomsday" target="_blank"><i class="fa fa-github"></i></a></h3>
+                        <p class="info"><em class="date">April 2018</em></p>
+                        <p>
+                            Doomsday is a application that monitors the expiration dates of certificates in Vault, Credhub, and PCF OpsManager. It serves as a
+                            warning system to prevent the unknown expiration of certificates and the catastrophe that inevitably follows. I implemented the Credhub,
+                            and OpsManager interfaces to pull certificates from their respective credential stores as well as assisted in the implementation of the CLI
+                            and WebUI
+                        </p>
+                    </div>
+                </div>
+                <div class="row item">
+                    <div class="twelve columns">
+                        <h3> Vault-Broker <a class="github" href="https://github.com/cloudfoundry-community/vault-broker" target="_blank"><i class="fa fa-github"></i></a></h3>
+                        <p class="info"><em class="date">March 2018</em></p>
+                        <p>
+                            The Vault-Broker provides an implementation of the open service broker API for HashiCorp's Vault. The service broker connects to an existing 
+                            Vault cluster and can be used by multiple tenants within Cloud Foundry. This allows Cloud Foundry applications to be bound to a vault for secure
+                            secret generation and storage. I added High-Availability support for the broker such that if one of the backend vaults is unresponsive/down/unreachable,
+                            then the broker can failover to another vault in the cluster.
+                        </p>
+                    </div>
+                </div>
+                <div class="row item">
+                    <div class="twelve columns">
+                        <h3> SoftHSMv2 <a class="github" href="https://github.com/opendnssec/SoftHSMv2" target="_blank"><i class="fa fa-github"></i></a></h3>
+                        <p class="info"><em class="date">February 2018</em></p>
+                        <p>
+                            SoftHSM is an implementation of a cryptographic store accessible through a PKCS #11 interface. You can use it to explore PKCS #11 without having 
+                            a Hardware Security Module. I implemented support for CKM_GENERIC_SECRET_KEY_GEN which is required for HMAC operations in PKCS11 2.4.0.
+                        </p>
+                    </div>
+                </div>
+                <div class="row item">
+                    <div class="twelve columns">
+                        <h3> SHIELD <a class="github" href="https://github.com/starkandwayne/shield" target="_blank"><i class="fa fa-github"></i></a></h3>
+                        <p class="info"><em class="date">August 2017 - Present</em></p>
+                        <p>
+                            SHIELD is a data protection solution designed to make it easier for operations to protect their critical infrastructural data. 
+                            It provides primitives for scheduling automatic backups of key systems, including PostgreSQL, MySQL, Consul, Redis and MongoDB, 
+                            as well as a means for restoring backups in the event of an outage. Backups can be stored in a variety of cloud providers, including S3, 
+                            Scality, Microsoft Azure Blobstore, and more. I am one of the main contributors for Shield v8 which added an entirely new CLI, WebUI,
+                            Multi-Tenancy and Encryption at Rest support.
+                        </p>
+                    </div>
+                </div>
+                <div class="row item">
+                    <div class="twelve columns">
+                        <h3> Genesis <a class="github" href="https://github.com/starkandwayne/genesis" target="_blank"><i class="fa fa-github"></i></a></h3>
+                        <p class="info"><em class="date">August 2017 - Present</em></p>
+                        <p>
+                            Genesis is a tool that facilitates a BOSH deployment paradigm based on localization of general manifests to more specific environments, 
+                            allowing re-use of common structure (jobs, releases, properties, etc.) across multiple installations. I wrote and contributed to several
+                            deployment kits including the <a href="https://github.com/genesis-community/shield-genesis-kit" target="_blank">shield-kit</a>, 
+                            <a href="https://github.com/genesis-community/bosh-genesis-kit" target="_blank">bosh-kit</a>, <a href="https://github.com/genesis-community/vault-genesis-kit" target="_blank">vault-kit</a>, 
+                            <a href="https://github.com/genesis-community/concourse-genesis-kit" target="_blank">concourse-kit</a> and <a href="https://github.com/genesis-community/cf-genesis-kit" target="_blank">cf-kit</a>.
+                        </p>
+                    </div>
+                </div>
+                <div class="row item">
+                    <div class="twelve columns">
+                        <h3> Autolab <a class="github" href="https://github.com/UBAutograding/Autolab" target="_blank"><i class="fa fa-github"></i></a></h3>
+                        <p class="info"><em class="date">July 2016 - Present</em></p>
+                        <p>
+                            Autolab is a course management service, initially developed by a team of students at Carnegie Mellon University and University at Buffalo, 
+                            that enables instructors to offer autograded programming assignments to their students over the Web. The two key ideas in Autolab are autograding, 
+                            that is, programs evaluating other programs, and scoreboards. Autolab also provides other services that instructors expect in a course management system, 
+                            including gradebooks, rosters, handins/handouts, lab writeups, code annotation, manual grading, late penalties, grace days, cheat checking, 
+                            meetings, partners, and bulk emails. I am currently leading the development team at University at Buffalo as well as condutcting the release engineering
+                            and future architecture roadmap.
+                        </p>
+                    </div>
+                </div>
+                <div class="row item">
+                    <div class="twelve columns">
+                        <h3> Tango <a class="github" href="https://github.com/UBAutograding/Tango" target="_blank"><i class="fa fa-github"></i></a></h3>
+                        <p class="info"><em class="date">February 2016 - Present</em></p>
+                        <p>
+                            Tango is a standalone RESTful Web service that runs and manages jobs for <a href="https://github.com/UBAutograding/Autolab">Autolab</a>
+                            It handles the provisioning of docker containers, testing of student code, and result reporting to the Atuolab webUI. I was Responsible
+                            for implementing the job queue and scheduler as well as implementing the ability for tango to act as a distributed system across compute nodes
+                            with a centralized job manager to more effectively process jobs at a larger scale.
+                        </p>
+                    </div>
+                </div>
+                <div class="row item">
+                    <div class="twelve columns">
+                        <h3>802.11n/ac rate adaptation in smartphones -- Performance-power tradeoffs <a class="github" href="https://github.com/daviddob/RAPowerMeasurement" target="_blank"><i class="fa fa-github"></i></a></h3>
                         <p class="info"><em class="date">Aug 2016 – Jan 2017</em></p>
                         <p>
                             The recent 802.11n standard introduces a variety of mechanisms at the PHY and MAC layers (more aggressive modulation and coding schemes,
@@ -240,7 +332,6 @@
                         </p>
                     </div>
                 </div>
-
                 <div class="row item">
                     <div class="twelve columns">
                         <h3> PandOS - An Instructional Operating System</h3>
