Update info and touch up formatting

--- a/index.html
+++ b/index.html
@@ -137,14 +137,15 @@
                         <h3>Stark and Wayne</h3>
                         <p class="info">Cloud Engineer<span>&bull;</span> <em class="date">August 2017 - Present</em></p>
                         <p>
-                            Consulted and Engineered solutions for companies worldwide in the creation and deployment of open source cloud management solutions. 
-                            Deployed and maintained large scale application platforms as well as built tools and infrastructure to automate Cloud Foundry, Concourse, and Bosh Releases.
-                            Contributed to and released several large scale open-source projects into the 
+                            Consulted and Engineered solutions for companies worldwide, including those in the Fortune 10 and Government sector, in the creation
+                            and deployment of open source cloud management solutions. Deployed and maintained large scale application platforms as well as built 
+                            tools and infrastructure to automate Cloud Foundry, Kubernetes, and Bosh. Leveraged Infrastructure as Code, CI/CD, and DevOps principles
+                            to deploy and scale complex systems in a repeatable and efficient manner. Contributed to and released several large scale open-source projects into the 
                             <a href="https://github.com/starkandwayne" target="_blank">Stark & Wayne</a>,
                             <a href="https://github.com/cloudfoundry-community" target="_blank">Cloud Foundry Community</a>,
                             <a href="https://github.com/shieldproject" target="_blank">Shield Project</a>,
                             <a href="https://github.com/genesis-community" target="_blank">Genesis Community</a>,
-                            and <a href="https://github.com/blacksmith-community" target="_blank">Blacksmith Community</a> organizations. 
+                            and <a href="https://github.com/blacksmith-community" target="_blank">Blacksmith Community</a> organizations as well as several others. 
                         </p>
                     </div>
                 </div>
@@ -169,15 +170,13 @@
                             Analyzed computing and network needs in order to implement appropriate solutions within the organization.
                             Administered servers both physical and virtual, workstations, phones, remote locations and recommended future upgrades.
                             Researched and implemented a Disaster Recovery procedure including a solution that would allow all services
-                                to be available within 5 minutes regardless of the disaster scale.
-                            Virtualized major servers to allow for more cost effective, centralized upgrades as well as improved redundancy
-                                in the event of a hardware malfunction.
+                            to be available within 5 minutes regardless of the disaster scale. Virtualized major servers to allow for more cost 
+                            effective, centralized upgrades as well as improved redundancy in the event of a hardware malfunction.
                             Implemented a new procedure of remote software deployment and master images for simple and seamless
-                                upgrades of user workstations in addition to reliable asset tracking.
-                            Redesigned the server room layout to be more organized including strategic server, patch panel, and switch layout which
-                                aided cable management and troubleshooting efficiency.
-                            Worked closely and effectively with users to provide efficient technical support and informative documentation
-                                for hardware and software systems.
+                            upgrades of user workstations in addition to reliable asset tracking. Redesigned the server room layout to be
+                            more organized including strategic server, patch panel, and switch layout which aided cable management and 
+                            troubleshooting efficiency. Worked closely and effectively with users to provide efficient technical support 
+                            and informative documentation for hardware and software systems.
                         </p>
                     </div>
                 </div>
@@ -200,13 +199,12 @@
             </div>
             <div class="nine columns main-col">
                 <p>
-                    <b>Systems:</b> VMware VSphere, AWS, GCP, Kubernetes, Azure, OpenStack, Citrix XenServer, Windows Server, Linux/Unix <br>
-                    <b>Platforms:</b> Pivotal Cloud Foundry, OSS Cloud Foundry, GE Predix, Google App Engine<br>
-                    <b>Software:</b> Exchange, IIS, AD, Office Suite, Citrix, Cisco IOS, PDQDeploy, Wireshark <br>
+                    <b>Systems:</b> VMware vSphere, AWS, GCP, Kubernetes, Azure, OpenStack, Linux/Unix, Windows Server <br>
+                    <b>Platforms:</b> Pivotal Cloud Foundry, OSS Cloud Foundry, Google App Engine<br>
                     <b>Networks/Protocols:</b> LAN/WAN, TCP/IP, DNS, DHCP, NAT, SNMP, SMTP, FTP, VPN, HTTP <br>
-                    <b>Programming Languages:</b> C/C++, Go, Python, Shell Scripting, JavaScript, Java, Ruby <br>
-                    <b>Hardware:</b> Cisco Routers, Switches, WAPs, ASAs, Netgear Switches, Shoretel PBX
-                    EMC SAN, Workstations, Servers(HP, Dell, IBM), Printers, Plotters(Canon) <br>
+                    <b>Programming Languages:</b> Go, Python, Shell Scripting, C/C++, JavaScript, Java, Ruby <br>
+                    <b>Hardware:</b> Cisco Routers, Switches, WAPs, ASAs, Netgear Switches, EMC SAN, Workstations, Servers(HP, Dell, IBM, SuperMicro) <br>
+                    <b>Software:</b> Terraform, Concourse, Jenkins, Wireshark, AD, Office Suite <br>
                 </p>
                 <!--
                 <div class="bars">
@@ -258,7 +256,7 @@
                             <a href="https://github.com/genesis-community/cf-genesis-kit" target="_blank">cf-kit</a>,
                             <a href="https://github.com/genesis-community/bosh-genesis-kit" target="_blank">bosh-kit</a>, 
                             <a href="https://github.com/genesis-community/shield-genesis-kit" target="_blank">shield-kit</a>, 
-                            <a href="https://github.com/genesis-community/concourse-genesis-kit" target="_blank">concourse-kit</a> 
+                            <a href="https://github.com/genesis-community/concourse-genesis-kit" target="_blank">concourse-kit</a>, 
                             <a href="https://github.com/genesis-community/jumpbox-genesis-kit" target="_blank">jumpbox-kit</a>, 
                             <a href="https://github.com/genesis-community/vault-genesis-kit" target="_blank">vault-kit</a>, 
                             <a href="https://github.com/genesis-community/prometheus-genesis-kit" target="_blank">prometheus-kit</a>, 
@@ -311,7 +309,7 @@
                         <p class="info"><em class="date">February 2016 - Present</em></p>
                         <p>
                             Tango is a standalone RESTful Web service that runs and manages jobs for <a href="https://github.com/UBAutograding/Autolab">Autolab</a>
-                            It handles the provisioning of docker containers, testing of student code, and result reporting to the Atuolab WebUI. I was Responsible
+                            It handles the provisioning of docker containers, testing of student code, and result reporting to the Autolab WebUI. I was Responsible
                             for implementing the job queue and scheduler as well as implementing the ability for tango to act as a distributed system across compute nodes
                             with a centralized job manager to more effectively process jobs at a larger scale.
                         </p>
@@ -391,7 +389,7 @@
                 <ul class="social-links">
                     <li><a href="https://www.linkedin.com/in/daviddobmeier/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://github.com/daviddob" target="_blank"><i class="fa fa-github"></i></a></li>
-                    <li><a href="files/DavidDobmeier_Resume.pdf" target="_blank"><i class="fa fa-file-text"></i></a></li>
+                    <li><a class="smoothscroll" href="#resume"><i class="fa fa-file-text"></i></a></li>
                     <li><a href="mailto:david.dobmeier@live.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
                     <li><a href="https://www.reddit.com/user/---ICEMAN---/" target="_blank"><i class="fa fa-reddit-alien" aria-hidden="true"></i></a></li>
                 </ul>
