Website updates - teaching, platforms, etc

--- a/index.html
+++ b/index.html
@@ -164,6 +164,19 @@
                 </div>
                 <div class="row item">
                     <div class="twelve columns">
+                        <h3>University at Buffalo - School of Engineering and Applied Sciences</h3>
+                        <p class="info">Adjunct Professor Of Practice<span>&bull;</span> <em class="date">August 2019 - June 2020</em></p>
+                        <p>
+                            Taught CSE410 - Modern Infrastructure Operations for junior and senior-­level students that covered a variety of topics 
+                            including capacity and network planning, equipment racking, installation and configuration of physical servers, physical 
+                            and digital security practices and implications, virtualization and containerization, implementation of Infrastructure as Code, 
+                            and tools and practices for monitoring production infrastructure. The course was designed to be a very hands-on experience, 
+                            focused on the practical application of systems planning and administration using modern Agile and DevOps methodologies.
+                        </p>
+                    </div>
+                </div>
+                <div class="row item">
+                    <div class="twelve columns">
                         <h3>Uniland Development Company</h3>
                         <p class="info">Systems Administrator <span>&bull;</span> <em class="date">July 2012 - September 2017</em></p>
                         <p>
@@ -186,7 +199,8 @@
                         <p class="info">Undergraduate Teaching Assistant<span>&bull;</span> <em class="date">February 2015 - December 2017</em></p>
                         <p>
                             Designed homeworks/projects, performed grading, and instructed students both in group settings and 1-on-1
-                            in Modern Networking, Data Structures, Intro to the Internet, Intro to CS I, and Intro to CS II
+                            in Modern Networking Concepts, Software Engineering, Operating Systems, Data Structures, Intro to the Internet, 
+                            Intro to CS I, and Intro to CS II
                         </p>
                     </div>
                 </div>
@@ -199,8 +213,8 @@
             </div>
             <div class="nine columns main-col">
                 <p>
-                    <b>Systems:</b> VMware vSphere, AWS, GCP, Kubernetes, Azure, OpenStack, Linux/Unix, Windows Server <br>
-                    <b>Platforms:</b> Pivotal Cloud Foundry, OSS Cloud Foundry, Google App Engine<br>
+                    <b>Systems:</b> VMware vSphere, AWS, GCP, Azure, OpenStack, Linux/Unix, Windows Server <br>
+                    <b>Platforms:</b> Kubernetes, Cloud Foundry, EKS, GKE, AKS, Rancher, VMware Tanzu<br>
                     <b>Networks/Protocols:</b> LAN/WAN, TCP/IP, DNS, DHCP, NAT, SNMP, SMTP, FTP, VPN, HTTP <br>
                     <b>Programming Languages:</b> Go, Python, Shell Scripting, C/C++, JavaScript, Java, Ruby <br>
                     <b>Hardware:</b> Cisco Routers, Switches, WAPs, ASAs, Netgear Switches, EMC SAN, Workstations, Servers(HP, Dell, IBM, SuperMicro) <br>
