--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="row item">
+                <!-- <div class="row item">
                     <div class="twelve columns">
                         <h4>Honors and Awards</h4>
                         <p class="info">University at Buffalo Dean's List</p>
@@ -123,7 +123,7 @@
                         <p class="info">Provost Scholarship<span>&bull;</span> <em class="date">August 2013 </em></p>
 
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
 
