Update with new position

--- a/index.html
+++ b/index.html
@@ -131,11 +131,25 @@
             <div class="three columns header-col">
                 <h1><span>Experience</span></h1>
             </div>
+            
             <div class="nine columns main-col">
                 <div class="row item">
                     <div class="twelve columns">
+                        <h3>Dicks Sporting Goods</h3>
+                        <p class="info">Sr. Cloud Engineer<span>&bull;</span> <em class="date">August 2020 - Present</em></p>
+                        <p>
+                            Deployed and maintained large Cloud Foundry, Kubernetes, and bespoke infrastructure solutions.
+                            Leveraged Infrastructure as Code, CI/CD, and DevOps principles to deploy and scale complex systems 
+                            in a repeatable and efficient manner. Automated the upgrade lifecycle and day two operations for 
+                            several systems to ensure stable operations. Worked with many product teams to architect solutions
+                            and remove blockers for a more streamlined development experience.
+                        </p>
+                    </div>
+                </div>
+                <div class="row item">
+                    <div class="twelve columns">
                         <h3>Stark and Wayne</h3>
-                        <p class="info">Cloud Engineer<span>&bull;</span> <em class="date">August 2017 - Present</em></p>
+                        <p class="info">Cloud Engineer II<span>&bull;</span> <em class="date">August 2017 - August 2020</em></p>
                         <p>
                             Consulted and Engineered solutions for companies worldwide, including those in the Fortune 10 and Government sector, in the creation
                             and deployment of open source cloud management solutions. Deployed and maintained large scale application platforms as well as built 
