Update projects for 2021

--- a/index.html
+++ b/index.html
@@ -258,67 +258,6 @@
             <div class="nine columns main-col">
                 <div class="row item">
                     <div class="twelve columns">
-                        <h3> BOSH <a class="github" href="https://github.com/cloudfoundry/bosh" target="_blank"><i class="fa fa-github"></i></a></h3>
-                        <p class="info"><em class="date">July 2017 - Present</em></p>
-                        <p>
-                            Cloud Foundry BOSH is an open source tool chain for release engineering, deployment and lifecycle management of large scale distributed services.
-                            I have worked with the maintainers to identify and create patches for bugs in both the core as well as the CPIs, especially where air-gapped networks
-                            come into play. I have also worked to create and maintain several BOSH releases including the 
-                            <a href="https://github.com/starkandwayne/shield-boshrelease" target="_blank">shield-boshrelease</a>,
-                            <a href="https://github.com/starkandwayne/service-fabric-boshrelease" target="_blank">service-fabric-boshrelease</a>,
-                            <a href="https://github.com/cloudfoundry-community/vault-boshrelease" target="_blank">vault-boshrelease</a>,
-                            <a href="https://github.com/doomsday-project/doomsday-boshrelease" target="_blank">doomsday-boshrelease</a>,
-                            <a href="https://github.com/cloudfoundry-community/jumpbox-boshrelease" target="_blank">jumpbox-boshrelease</a>,
-                            and <a href="https://github.com/cloudfoundry-community/softhsm-boshrelease" target="_blank">softhsm-boshrelease</a>.
-                        </p>
-                    </div>
-                </div>
-                <div class="row item">
-                    <div class="twelve columns">
-                        <h3> Genesis <a class="github" href="https://github.com/starkandwayne/genesis" target="_blank"><i class="fa fa-github"></i></a></h3>
-                        <p class="info"><em class="date">August 2017 - Present</em></p>
-                        <p>
-                            Genesis is a tool that facilitates a BOSH deployment paradigm based on localization of general manifests to more specific environments, 
-                            allowing re-use of common structure (jobs, releases, properties, etc.) across multiple installations. I wrote and contributed to several
-                            deployment kits including the 
-                            <a href="https://github.com/genesis-community/cf-genesis-kit" target="_blank">cf-kit</a>,
-                            <a href="https://github.com/genesis-community/bosh-genesis-kit" target="_blank">bosh-kit</a>, 
-                            <a href="https://github.com/genesis-community/shield-genesis-kit" target="_blank">shield-kit</a>, 
-                            <a href="https://github.com/genesis-community/concourse-genesis-kit" target="_blank">concourse-kit</a>, 
-                            <a href="https://github.com/genesis-community/jumpbox-genesis-kit" target="_blank">jumpbox-kit</a>, 
-                            <a href="https://github.com/genesis-community/vault-genesis-kit" target="_blank">vault-kit</a>, 
-                            <a href="https://github.com/genesis-community/prometheus-genesis-kit" target="_blank">prometheus-kit</a>, 
-                            and <a href="https://github.com/genesis-community/minio-genesis-kit" target="_blank">minio-kit</a>.
-                        </p>
-                    </div>
-                </div>
-                <div class="row item">
-                    <div class="twelve columns">
-                        <h3> Doomsday <a class="github" href="https://github.com/doomsday-project/doomsday" target="_blank"><i class="fa fa-github"></i></a></h3>
-                        <p class="info"><em class="date">April 2018 - Present</em></p>
-                        <p>
-                            Doomsday is a application that monitors the expiration dates of certificates in Vault, Credhub, and PCF Ops-Manager. It serves as a
-                            warning system to prevent the unknown expiration of certificates and the catastrophe that inevitably follows. I implemented the Credhub,
-                            and OpsManager interfaces to pull certificates from their respective credential stores as well as assisted in the implementation of the CLI
-                            and WebUI
-                        </p>
-                    </div>
-                </div>
-                <div class="row item">
-                    <div class="twelve columns">
-                        <h3> SHIELD <a class="github" href="https://github.com/starkandwayne/shield" target="_blank"><i class="fa fa-github"></i></a></h3>
-                        <p class="info"><em class="date">August 2017 - Present</em></p>
-                        <p>
-                            SHIELD is a data protection solution designed to make it easier for operations to protect their critical infrastructural data. 
-                            It provides primitives for scheduling automatic backups of key systems, including PostgreSQL, MySQL, Consul, Redis and MongoDB, 
-                            as well as a means for restoring backups in the event of an outage. Backups can be stored in a variety of cloud providers, including S3, 
-                            Scality, Microsoft Azure Blobstore, and more. I am one of the main contributors for Shield v8 which added an entirely new CLI, WebUI,
-                            Multi-Tenancy and Encryption at Rest support.
-                        </p>
-                    </div>
-                </div>
-                <div class="row item">
-                    <div class="twelve columns">
                         <h3> Autolab <a class="github" href="https://github.com/UBAutograding/Autolab" target="_blank"><i class="fa fa-github"></i></a></h3>
                         <p class="info"><em class="date">July 2016 - Present</em></p>
                         <p>
@@ -340,6 +279,67 @@
                             It handles the provisioning of docker containers, testing of student code, and result reporting to the Autolab WebUI. I was Responsible
                             for implementing the job queue and scheduler as well as implementing the ability for tango to act as a distributed system across compute nodes
                             with a centralized job manager to more effectively process jobs at a larger scale.
+                        </p>
+                    </div>
+                </div>
+                <div class="row item">
+                    <div class="twelve columns">
+                        <h3> Doomsday <a class="github" href="https://github.com/doomsday-project/doomsday" target="_blank"><i class="fa fa-github"></i></a></h3>
+                        <p class="info"><em class="date">April 2018 - Present</em></p>
+                        <p>
+                            Doomsday is a application that monitors the expiration dates of certificates in Vault, Credhub, and PCF Ops-Manager. It serves as a
+                            warning system to prevent the unknown expiration of certificates and the catastrophe that inevitably follows. I implemented the Credhub,
+                            and OpsManager interfaces to pull certificates from their respective credential stores as well as assisted in the implementation of the CLI
+                            and WebUI
+                        </p>
+                    </div>
+                </div>
+                <div class="row item">
+                    <div class="twelve columns">
+                        <h3> Genesis <a class="github" href="https://github.com/starkandwayne/genesis" target="_blank"><i class="fa fa-github"></i></a></h3>
+                        <p class="info"><em class="date">August 2017 - August 2020 </em></p>
+                        <p>
+                            Genesis is a tool that facilitates a BOSH deployment paradigm based on localization of general manifests to more specific environments, 
+                            allowing re-use of common structure (jobs, releases, properties, etc.) across multiple installations. I wrote and contributed to several
+                            deployment kits including the 
+                            <a href="https://github.com/genesis-community/cf-genesis-kit" target="_blank">cf-kit</a>,
+                            <a href="https://github.com/genesis-community/bosh-genesis-kit" target="_blank">bosh-kit</a>, 
+                            <a href="https://github.com/genesis-community/shield-genesis-kit" target="_blank">shield-kit</a>, 
+                            <a href="https://github.com/genesis-community/concourse-genesis-kit" target="_blank">concourse-kit</a>, 
+                            <a href="https://github.com/genesis-community/jumpbox-genesis-kit" target="_blank">jumpbox-kit</a>, 
+                            <a href="https://github.com/genesis-community/vault-genesis-kit" target="_blank">vault-kit</a>, 
+                            <a href="https://github.com/genesis-community/prometheus-genesis-kit" target="_blank">prometheus-kit</a>, 
+                            and <a href="https://github.com/genesis-community/minio-genesis-kit" target="_blank">minio-kit</a>.
+                        </p>
+                    </div>
+                </div>
+                <div class="row item">
+                    <div class="twelve columns">
+                        <h3> SHIELD <a class="github" href="https://github.com/starkandwayne/shield" target="_blank"><i class="fa fa-github"></i></a></h3>
+                        <p class="info"><em class="date">August 2017 - July 2020 </em></p>
+                        <p>
+                            SHIELD is a data protection solution designed to make it easier for operations to protect their critical infrastructural data. 
+                            It provides primitives for scheduling automatic backups of key systems, including PostgreSQL, MySQL, Consul, Redis and MongoDB, 
+                            as well as a means for restoring backups in the event of an outage. Backups can be stored in a variety of cloud providers, including S3, 
+                            Scality, Microsoft Azure Blobstore, and more. I am one of the main contributors for Shield v8 which added an entirely new CLI, WebUI,
+                            Multi-Tenancy and Encryption at Rest support.
+                        </p>
+                    </div>
+                </div>
+                <div class="row item">
+                    <div class="twelve columns">
+                        <h3> BOSH <a class="github" href="https://github.com/cloudfoundry/bosh" target="_blank"><i class="fa fa-github"></i></a></h3>
+                        <p class="info"><em class="date">July 2017 - September 2019</em></p>
+                        <p>
+                            Cloud Foundry BOSH is an open source tool chain for release engineering, deployment and lifecycle management of large scale distributed services.
+                            I have worked with the maintainers to identify and create patches for bugs in both the core as well as the CPIs, especially where air-gapped networks
+                            come into play. I have also worked to create and maintain several BOSH releases including the 
+                            <a href="https://github.com/starkandwayne/shield-boshrelease" target="_blank">shield-boshrelease</a>,
+                            <a href="https://github.com/starkandwayne/service-fabric-boshrelease" target="_blank">service-fabric-boshrelease</a>,
+                            <a href="https://github.com/cloudfoundry-community/vault-boshrelease" target="_blank">vault-boshrelease</a>,
+                            <a href="https://github.com/doomsday-project/doomsday-boshrelease" target="_blank">doomsday-boshrelease</a>,
+                            <a href="https://github.com/cloudfoundry-community/jumpbox-boshrelease" target="_blank">jumpbox-boshrelease</a>,
+                            and <a href="https://github.com/cloudfoundry-community/softhsm-boshrelease" target="_blank">softhsm-boshrelease</a>.
                         </p>
                     </div>
                 </div>
@@ -425,7 +425,7 @@
             <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
         </div>
         <div class="row">
-            <p>Copyright © 2020 David Dobmeier</p>
+            <p>Copyright © 2021 David Dobmeier</p>
         </div>
 
     </footer>
