Update profile pic and job info

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="row banner">
             <div class="banner-text">
                 <h1 class="responsive-headline">David Dobmeier</h1>
-                <h3>I'm a <span>Cloud Engineer</span>, <span>Systems Administrator</span> and <span>Hobbyist Tinkerer</span> who has a passion for automation, reliability, and bleeding edge technology.</h3>
+                <h3>I'm a <span>Cloud Engineer</span>, <span>Bookworm</span> and <span>Hobbyist Tinkerer</span> who has a passion for automation, reliability, and bleeding edge technology.</h3>
                 <hr />
                 <ul class="social">
                     <li><a href="https://www.linkedin.com/in/daviddobmeier/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
@@ -57,11 +57,10 @@
             <div class="nine columns main-col">
                 <h2>About Me</h2>
                 <p>
-                    I'm a Cloud Engineer for a global cloud consulting firm who is driven to solve the hard problems and adapt to a fast-paced and ever changing environment.
-                    I have experience in Systems and Networks administration currently both professionally and as a hobby interest.
+                    I'm a Cloud Engineer for DICK'S Sporting Goods who is driven to solve the hard problems and adapt to a fast-paced and ever changing environment.
                     I strive to create and support systems that not only function efficiently under the hood, but also are stable and scalable for consistent future use.
                     I am always looking forward to the next iteration of faster more efficient technology with custom PC building a favourite past-time.
-                    When I'm not in front of a computer screen, I'm probably 3D Printing, skiing, hammocking, managing musical productions, or getting lost in a novel.
+                    When I'm not in front of a computer screen, I'm probably hiking, skiing, hammocking, managing musical productions, or getting lost in a novel.
                 </p> 
                 <div class="row">
                     <div class="columns contact-details">
@@ -135,14 +134,20 @@
             <div class="nine columns main-col">
                 <div class="row item">
                     <div class="twelve columns">
-                        <h3>Dicks Sporting Goods</h3>
+                        <h3>DICK'S Sporting Goods</h3>
                         <p class="info">Sr. Cloud Engineer<span>&bull;</span> <em class="date">August 2020 - Present</em></p>
                         <p>
-                            Deployed and maintained large Cloud Foundry, Kubernetes, and bespoke infrastructure solutions.
-                            Leveraged Infrastructure as Code, CI/CD, and DevOps principles to deploy and scale complex systems 
-                            in a repeatable and efficient manner. Automated the upgrade lifecycle and day two operations for 
-                            several systems to ensure stable operations. Worked with many product teams to architect solutions
+                            Partnered directly with product teams to architect solutions, implement new platform capabilities, 
                             and remove blockers for a more streamlined development experience.
+                            Automated upgrade life-cycle and day two operations with Infrastructure as Code and CI/CD to ensure 
+                            stable operations across the platform toolchain.
+                            Redesigned the deployment of core platform services like Hashicorp Vault, Sonarqube, Prometheus, 
+                            Github Actions, and Concourse to increase reliability.
+                            Collaborated across the tech organization on large initiatives in the Azure Cloud, Monitoring, Networking, 
+                            and Security domains as part of the Cloud Center of Excellence.
+                            Developed best-practice Terraform modules with corresponding reference architectures for Azure Services and 
+                            worked closely with product teams to teach the process of infrastructure deployments via IaC.
+                            Maintained and upgraded large scale deployments of Pivotal Cloud Foundry and Kubernetes supporting critical applications.
                         </p>
                     </div>
                 </div>
@@ -425,7 +430,7 @@
             <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
         </div>
         <div class="row">
-            <p>Copyright © 2021 David Dobmeier</p>
+            <p>Copyright © 2017-2021 David Dobmeier</p>
         </div>
 
     </footer>
