Update profile information with new title

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             <div class="nine columns main-col">
                 <h2>About Me</h2>
                 <p>
-                    I'm a Cloud Engineer for DICK'S Sporting Goods who is driven to solve the hard problems and adapt to a fast-paced and ever changing environment.
+                    I'm a Cloud Architect for DICK'S Sporting Goods who is driven to solve hard problems and adapt to a fast-paced and ever changing environment.
                     I strive to create and support systems that not only function efficiently under the hood, but also are stable and scalable for consistent future use.
                     I am always looking forward to the next iteration of faster more efficient technology with custom PC building a favourite past-time.
-                    When I'm not in front of a computer screen, I'm probably hiking, skiing, hammocking, managing musical productions, or getting lost in a novel.
+                    When I'm not in front of a computer screen, I'm probably hiking, skiing, hammocking, managing musical productions, adventuring with the pup, or getting lost in a novel.
                 </p> 
                 <div class="row">
                     <div class="columns contact-details">
@@ -430,7 +430,7 @@
             <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
         </div>
         <div class="row">
-            <p>Copyright © 2017-2021 David Dobmeier</p>
+            <p>Copyright © 2022 David Dobmeier</p>
         </div>
 
     </footer>
